# planner_40_bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  service_schema.yaml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_update_wizard_sessions.py
config/: app.example.yaml  service_schema.example.yaml
src/meeting_bot/: __init__.py  __main__.py  access.py  bot.py  card_service.py  command_catalog.py  config.py  deadlines.py  domain.py  intent_parser.py  llm_client.py  models.py  notifications.py  pdf_report.py  readiness.py  schema.py  storage.py  update_wizard.py  voice.py
src/meeting_bot/handlers/: admin.py  callbacks.py  commands.py  common.py  messages.py  update_wizard.py
tests/: conftest.py  test_access.py  test_access_handlers.py  test_card_service.py  test_command_catalog.py  test_common_formatting.py  test_config.py  test_deadlines.py  test_llm_client.py  test_messages.py  test_notifications.py  test_pdf_report.py  test_readiness.py  test_schema.py  test_update_wizard.py  test_voice.py
