[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "meeting-bot"
version = "1.0.0"
description = "Schema-driven Telegram bot for preparing one weekly meeting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.21,<1",
  "alembic>=1.16,<2",
  "greenlet>=3.2,<4",
  "openai>=1.109,<3",
  "pydantic>=2.12,<3",
  "PyYAML>=6.0.2,<7",
  "python-telegram-bot[job-queue]>=22.8,<23",
  "reportlab>=4.4,<5",
  "SQLAlchemy>=2.0.41,<3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.2,<2",
  "ruff>=0.14,<1",
  "types-PyYAML>=6.0.12.20250915",
]

[project.scripts]
meeting-bot = "meeting_bot.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_bot"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["RUF001", "ASYNC230"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ASYNC240"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = false
exclude = [
  "src/meeting_bot/bot.py",
  "src/meeting_bot/handlers/",
  "src/meeting_bot/llm_client.py",
  "src/meeting_bot/notifications.py",
  "src/meeting_bot/pdf_report.py",
  "src/meeting_bot/voice.py",
]
ignore_missing_imports = true
